# Wan2-1-Unofficial

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: default.yaml
scripts/: smoke_test.py
src/wan2_1_unofficial/: __init__.py  model.py
